// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeFinite fails when given a finite number 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeFinite()</intensity>

Expected value to not be finite received:
  <red>1</color>"
`;

exports[`.toBeFinite fails when not given Infinity 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeFinite()</intensity>

Expected value to be finite received:
  <red>Infinity</color>"
`;

exports[`.toBeFinite fails when not given NaN 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeFinite()</intensity>

Expected value to be finite received:
  <red>NaN</color>"
`;
